# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2024 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("@pip_deps//:requirements.bzl", "requirement")
load("//book/htmlbook/tools/python:defs.bzl", "rt_py_test")
load("@pip_deps//:requirements.bzl", "requirement")

rt_py_test(
    name = "install_html_meta_data",
    srcs = [
      "install_html_meta_data.py",
    ],
    args = ["--read_only"],
    data = [
        "//book:chapters",
        "//book:html",
        "//:workspace",
    ],
    deps = [
      requirement("lxml"),
      requirement("mysql-connector-python"),
    ],
    tags = ["requires-network"],  # for mysql.csail
)

rt_py_test(
    name = "check_deepnote_requirements",
    srcs = [
      "check_deepnote_requirements.py",
    ],
    data = [
        "//:pyproject.toml",
        "//book:deepnote",
    ],
    deps = [
      requirement("requests"),
    ],
    tags = ["requires-network"], 
)