# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2024 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//book/htmlbook/tools/python:requirements.bzl", "requirement")
load("//book/htmlbook/tools/python:defs.bzl", "rt_py_library", "rt_py_test")

rt_py_library(
    name = "htmlbook",
    srcs = [
      "__init__.py",
      "book_name.py"
    ],
    imports = [".."],
    data = [
        "//:pyproject.toml",
    ],
    visibility = ["//visibility:public"],
)


rt_py_test(
    name = "install_html_meta_data",
    srcs = [
      "install_html_meta_data.py",
    ],
    args = ["--read_only"],
    data = [
        "//book:chapters",
        "//book:html",
        "//:workspace",
    ],
    deps = [
      requirement("lxml"),
      requirement("mysql_connector_python"),
    ],
    tags = ["requires-network"],  # for mysql.csail
)

rt_py_test(
    name = "check_deepnote_requirements",
    srcs = [
        "check_deepnote_requirements.py",
    ],
    data = [
        "//:pyproject.toml",
        "//book:deepnote",
    ],
    deps = [
        requirement("requests"),
    ],
    tags = ["requires-network"], 
)


rt_py_test(
    name = "check_website",
    srcs = ["check_website.py"],
    deps = [
        ":htmlbook",
        requirement("requests"),
    ],
    tags = ["requires-network"],
)