# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2024 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:native_binary.bzl", "native_binary")

native_binary(
    name = "buildifier",
    src = select({
        "//book/htmlbook/tools/configs/platform:linux": "@buildifier_linux//file",
        "//book/htmlbook/tools/configs/platform:macos_i386": "@buildifier_macos//file",
        "//book/htmlbook/tools/configs/platform:macos_arm64": "@buildifier_macos//file",
    }),
    out = "buildifier",
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
)
