# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2024 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_python//python:defs.bzl", "py_binary")
load("//book/htmlbook/tools/python:requirements.bzl", "requirement")
load("//book/htmlbook/tools/python:defs.bzl", "rt_py_binary")

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
)

rt_py_binary(
    name = "check_html_links_exist",
    srcs = ["check_html_links_exist.py"],
    deps = [
        requirement("requests"),
    ],
    visibility = ["//visibility:public"],
)
