# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2024 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = ["//book/htmlbook/tools/python:defs"],
)

py_binary(
    name = "nbconvert",
    srcs = ["nbconvert_script.py"],
    legacy_create_init = False,
    main = "nbconvert_script.py",
    python_version = "PY3",
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
      requirement("nbconvert"),
      requirement("ipython"),
    ],
)

py_binary(
    name = "ipynb_output",
    srcs = ["ipynb_output.py"],
    visibility = ["//visibility:public"],
)
