# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2021 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_python//python:defs.bzl", "py_runtime", "py_runtime_pair")

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//htmlbook/tools/jupyter:__pkg__"],
    deps = [
        ":rules_python_defs",
        "//htmlbook/tools/pycodestyle:def",
    ],
)

py_runtime(
    name = "linux_py_runtime",
    interpreter_path = "/usr/bin/python3",
    python_version = "PY3",
)

py_runtime_pair(
    name = "linux_py_runtime_pair",
    py3_runtime = ":linux_py_runtime",
)

toolchain(
    name = "linux_toolchain",
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = ":linux_py_runtime_pair",
    toolchain_type = "@rules_python//python:toolchain_type",
)

py_runtime(
    name = "macos_i386_py3_runtime",
    interpreter_path = "/usr/local/bin/python3.9",
    python_version = "PY3",
)

py_runtime(
    name = "macos_arm64_py3_runtime",
    interpreter_path = "/opt/homebrew/bin/python3.9",
    python_version = "PY3",
)

py_runtime_pair(
    name = "macos_i386_py_runtime_pair",
    py3_runtime = ":macos_i386_py3_runtime",
)

py_runtime_pair(
    name = "macos_arm64_py_runtime_pair",
    py3_runtime = ":macos_arm64_py3_runtime",
)

toolchain(
    name = "macos_i386_toolchain",
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:osx",
    ],
    toolchain = ":macos_i386_py_runtime_pair",
    toolchain_type = "@rules_python//python:toolchain_type",
)

toolchain(
    name = "macos_arm64_toolchain",
    target_compatible_with = [
        "@platforms//cpu:arm64",
        "@platforms//os:osx",
    ],
    toolchain = ":macos_arm64_py_runtime_pair",
    toolchain_type = "@rules_python//python:toolchain_type",
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//htmlbook/tools/jupyter:__pkg__"],
    deps = [
        ":rules_python_pip",
        ":rules_python_repositories",
    ],
)

bzl_library(
    name = "rules_python_defs",
    srcs = ["@rules_python//python:defs.bzl"],
)

bzl_library(
    name = "rules_python_pip",
    srcs = ["@rules_python//python:pip.bzl"],
)

bzl_library(
    name = "rules_python_repositories",
    srcs = ["@rules_python//python:repositories.bzl"],
)
