# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2023 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "def",
    srcs = ["def.bzl"],
    deps = ["@bazel_skylib//lib:shell"],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    deps = ["//book/htmlbook/tools/repo:local"],
)

alias(
    name = "tidy",
    actual = select({
        "//book/htmlbook/tools/configs/platform:linux": "@tidy_linux//file",
        "//book/htmlbook/tools/configs/platform:macos_i386": "@tidy_macos_i386//file",
        "//book/htmlbook/tools/configs/platform:macos_arm64": "@tidy_macos_arm64//file",
    }),
    visibility = ["//:__subpackages__"],
)

exports_files(
    ["tidy_runner.bash.in"],
    visibility = ["//:__subpackages__"],
)
